--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-# Welcome to Tammy's first Sea Glass webpage
+<h1> Welcome to Tammy's first Sea Glass webpage</h1>
+<center>
+We have a picture of a cat. 
+<img src="img/img_3976.jpg"><br>
 
-We have a picture of a cat 
+... a dude in the sand... 
+<img src="img/img_4391.jpg"><br>
 
+... and some water... 
+<img src="img/20160718_205547.jpg"><br></center>
