--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1> Welcome to Tammy's first Sea Glass webpage</h1>
 <center>
 We have a picture of a cat. 
-<img src="img/img_3976.jpg"><br>
+<img src="img/IMG_3976.JPG"><br>
 
 ... a dude in the sand... 
 <img src="img/img_4391.jpg"><br>
