--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <h1> Welcome to Tammy's first Sea Glass webpage</h1>
 
 We have a picture of a cat. 
-<img src="img/IMG_3976.JPG" width=500 ><br>
+<img src="img/IMG_3976.JPG" width="500" ><br>
 
 ... a dude in the sand... 
-<img src="img/img_4391.jpg" width=500><br>
+<img src="img/IMG_4391.JPG" width="500"><br>
 
 ... and some water... 
-<img src="img/20160718_205547.jpg" width=500><br></center>
+<img src="img/20160718_205547.jpg" width="500"><br></center>
