--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <center>
   <h1> Welcome to Tammy's first Sea Glass webpage</h1>
 
-We have a picture of a cat. 
+We have a picture of a cat. <br>
 <img src="img/IMG_3976.JPG" width="500" ><br>
 
-... a dude in the sand... 
+... a dude in the sand... <br>
 <img src="img/IMG_4391.JPG" width="500"><br>
 
-... and some water... 
+... and some water... <br>
 <img src="img/20160718_205547.jpg" width="500"><br></center>
