--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ We have a picture of a cat. <br>
 <img src="img/IMG_3976.JPG" width="500" ><br>
 
 ... a dude in the sand... <br>
-<img src="img/IMG_4391.JPG" width="500"><br>
+<img src="img/IMG_4391.JPG" width="500"  data-rotate="90"><br>
 
 ... and some water... <br>
 <img src="img/20160718_205547.jpg" width="500"><br></center>
