--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <center>
   <h1> Welcome to Tammy's first Sea Glass webpage</h1>
-
-We have a picture of a cat. <br>
-<img src="img/IMG_3976.JPG" width="500" ><br>
-
-... a dude in the sand... <br>
-<img src="img/IMG_4391.JPG" width="500"  data-rotate="90"><br>
-
-... and some water... <br>
-<img src="img/20160718_205547.jpg" width="500"><br></center>
+<table>
+  <tr><td><img src="img/IMG_3976.JPG" width="500" ></td>
+    <td><img src="img/IMG_4391.JPG" width="500"></td>
+    <td><img src="img/20160718_205547.jpg" width="500"></td>
+  </tr><tr><td>We have a picture of a cat</td><td>... a dude in the sand... </td><td>... and some water...</td>
+  </tr>
+</table
