--- a/bs_index.html
+++ b/bs_index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
   <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p> 
+  <p>This is some text. (fluid)</p> 
 </div>
 
 </body>
