--- a/bs_index.html
+++ b/bs_index.html
@@ -12,8 +12,10 @@
 <body>
 
 <div class="container-fluid">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text. (fluid)</p> 
+  <div class="row">
+    <div class="col-sm-2">This is a cute girl that I know, cuddling with her cute cat.</div>
+    <div class="col-sm-10"><img src="img/IMG_3976.JPG" width="250" ></div>
+  </div>
 </div>
 
 </body>
