--- a/gear_index.html
+++ b/gear_index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <!-- link href="./lib/gsaea/css/dashboard.css" rel="stylesheet" />
-    <!-- link href="./lib/gsaea/css/gear.css" rel="stylesheet" />
+    <!-- link href="./lib/gsaea/css/dashboard.css" rel="stylesheet" / -->
+    <!-- link href="./lib/gsaea/css/gear.css" rel="stylesheet" / -->
 </head>
 
 <body>
