--- a/gear_index.html
+++ b/gear_index.html
@@ -6,16 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Use the 'title' property to render a page title  -->
     <title>TT Sea Glass</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+	
+	
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./lib/css/dashboard.css" rel="stylesheet" />
-    <link href="./lib/css/gear.css" rel="stylesheet" />
+    <!-- link href="./lib/css/dashboard.css" rel="stylesheet" / -->
+    <!-- link href="./lib/css/gear.css" rel="stylesheet" / -->
 </head>
 
 <body>
     <div class="ea-wrapper">
-        <a href="#stage" class="ea-skip-link">skip to main content</a>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
