--- a/bs_index.html
+++ b/bs_index.html
@@ -51,7 +51,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#">Tammy Toes Sea Glass Jewelry</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -76,10 +76,19 @@
     </div>
     <div class="col-sm-10 text-left"> 
       <h1>Welcome</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Thank you for visiting my site! This is still a work-in-progress, so please be patient with me. For now, you will be able to see a listing of the jewelry that I have completed in the tables below. As I get time (and can motivate this lazy developer I've married), I'll get this site broken up into proper pages to assist in your viewing pleasure.</p>
       <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
+      <h3>Background</h3>
+      <p>I love Jewelry!</p>
+      <p>I love the beach!</p>
+      <p>I love sea glass!</p>
+      <p>One day, as I was walking along the beach and collecting sea glass, God gave me the idea of making it into jewelry. 
+        I knew that finding each piece of glass was a gift from Him, and I knew that it was going to be a passion and a pleasure to 
+        find these treasures and turn them into something beautiful. I knew on the spot that I would never be able to keep any of 
+        the money, so I decided that absolutely all of the profits would go to charity.</p>
+      <p>Today, these profits are shared between two charities: <a href="https://fburgspca.org/" target="_blank">my local SPCA</a>, and 
+        the <a href="www.fairygodmotherproject.org/" target="_blank">Fairy Godmother project</a> (in honor of Ann Smith, who provided a lion share of the sea glass I am working with). 
+      </p>
     </div>
   </div>
 </div>
