--- a/bs_index.html
+++ b/bs_index.html
@@ -51,7 +51,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Tammy Toes Sea Glass Jewelry</a>
+      <a class="navbar-brand" href="#">Tammy Toes <br>Sea Glass Jewelry</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
