--- a/bs_index.html
+++ b/bs_index.html
@@ -70,29 +70,15 @@
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Welcome</a></p>
-      <p><a href="#">Sea Glass Jewelry</a></p>
-      <p><a href="#">Crystal Necklaces</a></p>
-      <p><a href="#">Lanyards</a></p>
-      <p><a href="#">Bobble Bracelets</a></p>
+      <p><a href="index.html">Welcome</a></p>
+      <p><a href="seaglass.html">Sea Glass Jewelry</a></p>
+      <p><a href="necklaces.html">Crystal Necklaces</a></p>
+      <p><a href="lanyards.html">Lanyards</a></p>
+      <p><a href="bracelets.html">Bobble Bracelets</a></p>
     </div>
     <div class="col-sm-10 text-left"> 
       <h1>Welcome</h1>
       <p>Thank you for visiting my site! This is still a work-in-progress, so please be patient with me. For now, you will be able to see a listing of the jewelry that I have completed by clicking the links to the left.</p>
-      <hr>
-      <h3>Background</h3>
-      <p>I love Jewelry!</p>
-      <p>I love the beach!</p>
-      <p>I love sea glass!</p>
-      <p>One day, as I was walking along the beach and collecting sea glass, God gave me the idea of making it into jewelry. 
-        I knew that finding each piece of glass was a gift from Him, and I knew that it was going to be a passion and a pleasure to 
-        find these treasures and turn them into something beautiful. I knew on the spot that I would never be able to keep any of 
-        the money, so I decided that absolutely all of the profits would go to charity.</p>
-      <p>Today, these profits are shared between two charities: <a href="https://fburgspca.org/" target="_blank">my local SPCA</a>, and 
-        the <a href="www.fairygodmotherproject.org/" target="_blank">Fairy Godmother project</a> (in honor of Ann Smith, who provided a lion share of the sea glass I am working with). 
-      </p>
-      <h1>Welcome</h1>
-      <p>Thank you for visiting my site! This is still a work-in-progress, so please be patient with me. For now, you will be able to see a listing of the jewelry that I have completed in the tables below. As I get time (and can motivate this lazy developer I've married), I'll get this site broken up into proper pages to assist in your viewing pleasure.</p>
       <hr>
       <h3>Background</h3>
       <p>I love Jewelry!</p>
