--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="seaglass.html">Sea Glass</a></li>
+        <li><a href="necklace.html">Necklaces</a></li>
+        <li><a href="lanyard.html">Lanyards</a></li>
+        <li><a href="bracelet.html">Bracelets</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -69,14 +70,7 @@
   
 <div class="container-fluid text-center">    
   <div class="row content">
-    <div class="col-sm-2 sidenav">
-      <p><a href="index.html">Welcome</a></p>
-      <p><a href="seaglass.html">Sea Glass Jewelry</a></p>
-      <p><a href="necklaces.html">Crystal Necklaces</a></p>
-      <p><a href="lanyards.html">Lanyards</a></p>
-      <p><a href="bracelets.html">Bobble Bracelets</a></p>
-    </div>
-    <div class="col-sm-10 text-left"> 
+    <div class="col-sm-12 text-left"> 
       <h1>Welcome</h1>
       <p>Thank you for visiting my site! This is still a work-in-progress, so please be patient with me. For now, you will be able to see a listing of the jewelry that I have completed by clicking the links to the left.</p>
       <hr>
