--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
         <li><a href="lanyard.html">Lanyards</a></li>
         <li><a href="bracelet.html">Bracelets</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
     </div>
   </div>
 </nav>
@@ -72,7 +69,8 @@
   <div class="row content">
     <div class="col-sm-12 text-left"> 
       <h1>Welcome</h1>
-      <p>Thank you for visiting my site! This is still a work-in-progress, so please be patient with me. For now, you will be able to see a listing of the jewelry that I have completed by clicking the links to the left.</p>
+      <p>Thank you for visiting my site! This is still a work-in-progress, so please be patient with me. 
+      For now, you will be able to see a listing of the jewelry that I have completed by clicking the links at the top.</p>
       <hr>
       <h3>Background</h3>
       <p>I love Jewelry!</p>
