--- a/seaglass.html
+++ b/seaglass.html
@@ -77,14 +77,26 @@
   <div class="carousel-inner">
     <div class="item active">
       <img src="img/20160718_205547.jpg" alt="image #1">
+      <div class="carousel-caption">
+        <h3>Da Beach</h3>
+        <p>Tammy's Safe Space</p>
+      </div>
     </div>
 
     <div class="item">
       <img src="img/IMG_3976.JPG" alt="image #2">
+      <div class="carousel-caption">
+        <h3>Queen Penguin and Zelda</h3>
+        <p>Back when she loved us</p>
+      </div>
     </div>
 
     <div class="item">
       <img src="img/IMG_4391.JPG" alt="image #3">
+      <div class="carousel-caption">
+        <h3>King Penguin</h3>
+        <p>Chilling in the Sand</p>
+      </div>
     </div>
   </div>
 
