--- a/seaglass.html
+++ b/seaglass.html
@@ -76,7 +76,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="img/20160718_205547.jpg" alt="image #1" style="height:500px;">
+      <center><img src="img/20160718_205547.jpg" alt="image #1" style="height:500px;"></center>
       <div class="carousel-caption">
         <h3>Da Beach</h3>
         <p>Tammy's Safe Space</p>
@@ -92,7 +92,7 @@
     </div>
 
     <div class="item">
-      <img src="img/IMG_4391.JPG" alt="image #3" style="height:500px;">
+      <center><img src="img/IMG_4391.JPG" alt="image #3" style="height:500px;"></center>
       <div class="carousel-caption">
         <h3>King Penguin</h3>
         <p>Chilling in the Sand</p>
