--- a/seaglass.html
+++ b/seaglass.html
@@ -76,11 +76,11 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <center><img src="img/20160718_205547.jpg" alt="image #1" style="height:500px;"></center>
+      <center><img src="img/SG-17-002a.jpg" alt="image #1" style="height:500px;"></center>
       <div class="carousel-caption">
-        <h3>Da Beach</h3>
-        <p>Tammy's Safe Space</p>
-      </div>
+        <h3>#17-002</h3>
+        <p>Pendant $25, Earrings $15</p>
+        <p>Set $35</p>
     </div>
 
     <div class="item">
