--- a/seaglass.html
+++ b/seaglass.html
@@ -81,6 +81,7 @@
         <h3>#17-002</h3>
         <p>Pendant $25, Earrings $15</p>
         <p>Set $35</p>
+      </div>  
     </div>
 
     <div class="item">
