--- a/seaglass.html
+++ b/seaglass.html
@@ -85,20 +85,32 @@
     </div>
 
     <div class="item">
-      <center><img src="img/IMG_3976.JPG" alt="image #2" style="height:500px;"></center>
+      <center><img src="img/SG-17-002d.jpg" alt="image #1" style="height:500px;"></center>
       <div class="carousel-caption">
-        <h3>Queen Penguin and Zelda</h3>
-        <p>Back when she loved us</p>
+        <h3>#17-002</h3>
+        <p>Pendant $25, Earrings $15</p>
+        <p>Set $35</p>
       </div>
     </div>
 
     <div class="item">
-      <center><img src="img/IMG_4391.JPG" alt="image #3" style="height:500px;"></center>
+      <center><img src="img/SG-17-002a.jpg" alt="image #1" style="height:500px;"></center>
       <div class="carousel-caption">
-        <h3>King Penguin</h3>
-        <p>Chilling in the Sand</p>
+        <h3>#17-002</h3>
+        <p>Pendant $25, Earrings $15</p>
+        <p>Set $35</p>
       </div>
     </div>
+    
+    <div class="item">
+      <center><img src="img/SG-17-002d.jpg" alt="image #1" style="height:500px;"></center>
+      <div class="carousel-caption">
+        <h3>#17-002</h3>
+        <p>Pendant $25, Earrings $15</p>
+        <p>Set $35</p>
+      </div>
+    </div>
+    
   </div>
 
   <!-- Left and right controls -->
