--- a/seaglass.html
+++ b/seaglass.html
@@ -71,12 +71,13 @@
     <li data-target="#seaGlassCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#seaGlassCarousel" data-slide-to="1"></li>
     <li data-target="#seaGlassCarousel" data-slide-to="2"></li>
+    <li data-target="#seaGlassCarousel" data-slide-to="3"></li>    
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <center><img src="img/SG-17-002a.jpg" alt="image #1" style="height:500px;"></center>
+      <center><img src="img/SG-17-002a.jpg" alt="SG-17-002a" style="height:500px;"></center>
       <div class="carousel-caption">
         <h3>#17-002</h3>
         <p>Pendant $25, Earrings $15</p>
@@ -85,7 +86,7 @@
     </div>
 
     <div class="item">
-      <center><img src="img/SG-17-002d.jpg" alt="image #1" style="height:500px;"></center>
+      <center><img src="img/SG-17-002d.jpg" alt="SG-17-002d" style="height:500px;"></center>
       <div class="carousel-caption">
         <h3>#17-002</h3>
         <p>Pendant $25, Earrings $15</p>
@@ -94,7 +95,7 @@
     </div>
 
     <div class="item">
-      <center><img src="img/SG-17-002a.jpg" alt="image #1" style="height:500px;"></center>
+      <center><img src="img/SG-17-002a.jpg" alt="SG-17-002a" style="height:500px;"></center>
       <div class="carousel-caption">
         <h3>#17-002</h3>
         <p>Pendant $25, Earrings $15</p>
@@ -103,7 +104,7 @@
     </div>
     
     <div class="item">
-      <center><img src="img/SG-17-002d.jpg" alt="image #1" style="height:500px;"></center>
+      <center><img src="img/SG-17-002d.jpg" alt="SG-17-002d" style="height:500px;"></center>
       <div class="carousel-caption">
         <h3>#17-002</h3>
         <p>Pendant $25, Earrings $15</p>
