--- a/necklace.html
+++ b/necklace.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="item">
-      <center><img ssrc="img/SG-17-002a.jpg" alt="17-002a" style="height:500px;"></center>
+      <center><img src="img/SG-17-002a.jpg" alt="17-002a" style="height:500px;"></center>
       <div class="carousel-caption">
         <h3>#17-101 (Eventually)</h3>
         <p>Necklaces $25, Earrings $10</p>
