--- a/index.html
+++ b/index.html
@@ -83,12 +83,17 @@
       <p>Today, these profits are shared between two charities: <a href="https://fburgspca.org/" target="_blank">my local SPCA</a>, and 
         the <a href="www.fairygodmotherproject.org/" target="_blank">Fairy Godmother project</a> (in honor of Ann Smith, who provided a lion share of the sea glass I am working with). 
       </p>
+      <hr>
+      <h3>Ordering</h3>
+      <p>If you are interested in ordering any jewelry and supporting these worthy causes, please send me an email at <a href=mailto:"palmtree75@gmail.com?Subject=TT%20Jewelry">palmtree75@gmail.com</a>.</p>
+      <p> I am also able to make custom pieces, if you have preferences for particular colors. (Of course, the sea glass is dependant on what God brings to the beach!)
+      </p>      
     </div>
   </div>
 </div>
 
 <footer class="container-fluid text-center">
-  <p>(c) Saving Grace, 2107</p>
+  <p>(c) Saving Grace, 2107 || s.d.g.</p>
 </footer>
 
 </body>
