--- a/lanyard.html
+++ b/lanyard.html
@@ -122,7 +122,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>(c) Saving Grace, 2107</p>
+  <p>(c) Saving Grace, 2107 || s.d.g.</p>
 </footer>
 
 </body>
