--- a/seaglass.html
+++ b/seaglass.html
@@ -126,7 +126,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-  <p>(c) Saving Grace, 2107</p>
+  <p>(c) Saving Grace, 2107 || s.d.g.</p>
 </footer>
 
 </body>
