--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </p>
       <hr>
       <h3>Ordering</h3>
-      <p>If you are interested in ordering any jewelry and supporting these worthy causes, please send me an email at <a href=mailto:"palmtree75@gmail.com?Subject=TT%20Jewelry">palmtree75@gmail.com</a>.</p>
+      <p>If you are interested in ordering any jewelry and supporting these worthy causes, please send me an email at <a href=mailto:palmtree75@gmail.com?Subject=TT%20Jewelry target="_blank">palmtree75@gmail.com</a>.</p>
       <p> I am also able to make custom pieces, if you have preferences for particular colors. (Of course, the sea glass is dependant on what God brings to the beach!)
       </p>      
     </div>
