--- a/necklace.html
+++ b/necklace.html
@@ -76,7 +76,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <center><img src="img/SG-17-002a.jpg" alt="17-002a" style="height:500px;"></center>
+      <center><img src="img/17-401b.jpg" alt="17-401b" style="height:500px;"></center>
       <div class="carousel-caption">
         <h3>#17-401 (Eventually)</h3>
         <p>Starfish Necklace $30</p>
