--- a/seaglass.html
+++ b/seaglass.html
@@ -77,9 +77,9 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <center><img src="img/SG-17-002a.jpg" alt="SG-17-002a" style="height:500px;"></center>
+      <center><img src="img/17-198a" alt="17-198a" style="height:500px;"></center>
       <div class="carousel-caption">
-        <h3>#17-002</h3>
+        <h3>#17-198a</h3>
         <p>Pendant $25, Earrings $15</p>
         <p>Set $35</p>
       </div>  
