--- a/seaglass.html
+++ b/seaglass.html
@@ -79,7 +79,7 @@
     <div class="item active">
       <center><img src="img/17-198a" alt="17-198a" style="height:500px;"></center>
       <div class="carousel-caption">
-        <h3>#17-198a</h3>
+        <h3>#17-198a updated</h3>
         <p>Pendant $25, Earrings $15</p>
         <p>Set $35</p>
       </div>  
@@ -120,7 +120,7 @@
     <span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#seaGlassCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" style="color: black;"></span>
+    <span class="glyphicon glyphicon-chevron-right black"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
