--- a/seaglass.html
+++ b/seaglass.html
@@ -120,7 +120,7 @@
     <span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#seaGlassCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right black"></span>
+    <span class="glyphicon glyphicon-chevron-right" style="color:blue"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
