--- a/seaglass.html
+++ b/seaglass.html
@@ -79,7 +79,7 @@
     <div class="item active">
       <center><img src="img/17-198a" alt="17-198a" style="height:500px;"></center>
       <div class="carousel-caption">
-        <h3>#17-198a updated</h3>
+        <h3>#17-198a changed</h3>
         <p>Pendant $25, Earrings $15</p>
         <p>Set $35</p>
       </div>  
