--- a/seaglass.html
+++ b/seaglass.html
@@ -116,11 +116,11 @@
 
   <!-- Left and right controls -->
   <a class="left carousel-control" href="#seaGlassCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="glyphicon glyphicon-chevron-left" style="color:black"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#seaGlassCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" style="color:blue"></span>
+    <span class="glyphicon glyphicon-chevron-right" style="color:black"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
